force-app/main/default/objects/Opportunity_Tracker_Junction__c/Opportunity_Tracker_Junction__c.object-meta.xml
<CustomObject>
    <label>Opportunity &amp; Tracker Junction</label>
    <nameField>
        <displayFormat>OPP-ST-JUNC-{0000}</displayFormat>
        <label>Opportunity &amp; Tracker Junct Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity &amp; Tracker Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>