force-app/main/default/objects/Opportunity_Tracker_Junction__c/fields/Amount_Sponsored__c.field-meta.xml
<CustomField>
    <fullName>Amount_Sponsored__c</fullName>
    <label>Amount Sponsored</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>