force-app/main/default/objects/Opportunity_Tracker_Junction__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity &amp; Tracker Junction</relationshipLabel>
    <relationshipName>Opportunity_Tracker_Junction</relationshipName>
    <type>Lookup</type>
</CustomField>