force-app/main/default/objects/Opportunity_Tracker_Junction__c/fields/Sponsorship_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Tracker__c</fullName>
    <label>Sponsorship Tracker</label>
    <referenceTo>Sponsorship_Tracker__c</referenceTo>
    <relationshipLabel>Opportunity &amp; Tracker Junction</relationshipLabel>
    <relationshipName>Opportunity_Tracker_Junction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>